--- a/DNMonsters/AndroidManifest.xml
+++ b/DNMonsters/AndroidManifest.xml
@@ -4,9 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
+	
+		<uses-permission android:name="android.permission.WAKE_LOCK" />
+		<uses-permission android:name="android.permission.VIBRATE" />
+		<uses-permission android:name="android.permission.INTERNET" />
+		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+		<uses-permission android:name="android.permission.READ_PHONE_STATE" />		
 
     <application
         android:allowBackup="true"
@@ -15,10 +19,11 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="de.test.dnmonsters.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+			android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|mcc|mnc"
+			android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
